# Stargazer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: cache.py  config.py  security.py
app/models/: schemas.py
app/services/: github.py  neighbours.py
tests/: test_api.py  test_cache.py  test_github.py  test_neighbours.py
